# second-brain

./: .gitignore  pyproject.toml
configs/: chroma_hybrid_bm25.yaml  chroma_window_256.yaml
src/second_brain/application/: __init__.py  agent.py  chunking.py  evaluation.py  indexing.py  ports.py
src/second_brain/domain/: models.py
src/second_brain/infrastructure/: data_sources.py  llms.py  observability.py  vector_stores.py
src/second_brain/serving/: api.py  cli.py
src/second_brain/serving/frontend/: package-lock.json  package.json
src/second_brain/serving/frontend/src/: App.jsx
src/second_brain/test/second_brain/domain/: __init__.py
src/second_brain/test/second_brain/infrastructure/: config.py  vector_stores.py
