[project]
name = "second_brain"
version = "0.1.0"
description = "Small local agentic RAG lab inspired by the Decoding AI Second brain architecture"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.23",
    "datasets>=5.0.0",
    "ollama>=0.4.4",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "sentence-transformers>=3.3.1",
]

[project.scripts]
second_brain = "second_brain.serving.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
